# Kaggle-Users-Analysis

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-ci.yml
backend/: .env.example  main.py  requirements.txt
backend/.devcontainer/: devcontainer.json  requirements.txt
frontend/: main.py
frontend/.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
